# rate-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: __init__.py  manager.py
src/rate-manager/: __init__.py  manager.py
src/rate_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_manager.py
tests/logs/persist/: log_load.txt  log_loadexcess.txt  log_loadsync.txt
