[project]
name = "rate-manager"
version = "0.0.1"
authors = [
  { name="Sachin Iyer", email="sachinjiyer@gmail.com" },
]
description = "A small package to manage rate limits"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sachiniyer/rate-manager"
"Bug Tracker" = "https://github.com/sachiniyer/rate-manager/issues"
